fix: default chicken script tests not working